--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
+    "@types/react-native-sqlite-storage": "^5.0.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-camera": "^4.2.1",
@@ -20,6 +21,7 @@
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
